--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/Nickomang/nickoman.me/issues"
   },
-  "homepage": "https://github.com/Nickomang/nickoman.me#readme"
+  "homepage": "https://github.com/Nickomang/nickoman.me#readme",
+  "dependencies": {}
 }
